TC-151: refactoring SizeChecker(added getting font size from StyleUtils) (#61)
* TC-149: refactoring SizeChecker(added getting font size from StyleUtils)

* TC-151: refactoring